fix overflow and overal styles improvement

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'motseratt', sans-serif;
+  overflow: hidden;
 }
 
 .app {
@@ -40,34 +41,43 @@
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
 }
 
-.weather__search-box {
-  width: 90%;
-  margin: 0 auto;
-}
-
 .home__search-box {
   width: 90%;
+  padding: 10px;
   margin: 20px auto;
 }
 
-.search-box__input,
 .search-box__input {
   display: block;
   width: 100%;
-  padding: 15px;
+  padding: 15px 30px;
   border: none;
   outline: transparent;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 16px;
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-  color: #313131;
+  box-shadow: 2px 4px rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.6);
+  letter-spacing: 1.7px;
   font-size: 24px;
+  font-weight: 600;
   transition: 0.4s ease;
+  text-align: left;
 }
 
-.search-box__input:focus,
 .search-box__input:focus {
   background-color: rgba(255, 255, 255, 0.65);
+}
+
+.weather {
+  height: 100vh;
+  width: 100vw;
+  padding: 2px 5%;
+}
+
+.weather__search-box {
+  width: 100%;
+  padding: 0 10px 10px;
+  margin: 0 auto;
 }
 
 .weather__location {
@@ -77,7 +87,7 @@
 .general-info__location {
   color: white;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 600;
   text-align: center;
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
   padding-top: 15vh;
@@ -86,7 +96,7 @@
 .general-info__date {
   color: #ffffff;
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 500;
   font-style: italic;
   text-align: center;
   text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
@@ -102,13 +112,10 @@
   margin: 30px auto;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
-
   padding: 15px 25px;
-
   color: #ffffff;
   font-size: 102px;
   font-weight: 900;
-
   text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   text-align: center;
   box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
@@ -122,10 +129,6 @@
 }
 
 @media screen and (min-width: 650px) {
-  body {
-    overflow: hidden;
-  }
-
   .home__heading {
     padding-top: 15vh;
   }
@@ -138,7 +141,12 @@
     font-size: 2rem;
   }
 
+  .weather__search-box,
   .home__search-box {
     width: 70%;
+  }
+
+  .search-box__input {
+    padding: 15px 50px;
   }
 }
